--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+	--primary: #5ba4a4;
+	--background: #effafa;
+	--accent: #eef6f6;
+	--dark-200: #2c3a3a;
+	--dark-100: #7b8e8e;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
